--- a/README
+++ b/README
@@ -5,17 +5,21 @@ payload length are fixed at index creation time, and are small enough so multipl
 
 enum attrType, with values intType and stringType for now.
 
-MaxAttrs is a constant, set to 16 struct KeyType with the following attributes int numAttrs, attrType attrTypes[MaxAttrs] and int attrLen[MaxAttrs] 
+MaxAttrs is a constant, set to 16 
 
-int keylen(KeyType *keytype) returns the total length of the key int
+struct KeyType with the following attributes int numAttrs, attrType attrTypes[MaxAttrs] and int attrLen[MaxAttrs] 
 
-setIntAttrval(byte *key, KeyType *keytype, int attrnum, int val) key should be an array of bytes allocated already 
+int keylen(KeyType *keytype) returns the total length of the key
+
+int setIntAttrval(byte *key, KeyType *keytype, int attrnum, int val) key should be an array of bytes allocated already 
 
 int getIntAttrVal (byte *key, KeyType *keytype, int attrnum, int& retval)
 
 int setStringAttrVal(byte *key, KeyType, keytype, int attrnum, char *retval)
 
-int getStringAttrVal(byte *key, KeyType, keytype, int attrnum, char *retval) Note that retval should be allocated by the calling function and
+int getStringAttrVal(byte *key, KeyType, keytype, int attrnum, char *retval) 
+
+Note that retval should be allocated by the calling function and
 its address passed to the above function
 
 ------------------------------------------------------------------------------------------------------------------------------------------
@@ -28,7 +32,8 @@ with a pointer to the file offset of the root block of the tree, should be store
 
 Index(String indexname) Opens an existing index, and retrieves the associated type/length information from the head of the index.  
 
-int insert(byte key[], byte payload[]) key comparison should be based on the type of the key specified earlier, and it should be easy to modify your
+int insert(byte key[], byte payload[]) 
+key comparison should be based on the type of the key specified earlier, and it should be easy to modify your
 code to add new types. You do NOT have to make this object oriented, you just need a switch on the key type insider your insert/lookup
 functions.  The index should only support non-duplicate keys. If a key is duplicated, insert should return 0, and not insert the duplicate.
 Otherwise a value of 1 is returned.
